--- a/package.json
+++ b/package.json
@@ -9,7 +9,54 @@
     "watch": "webpack --mode=development --watch --devtool=sourcemap",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "extends": [
+      "plugin:react/recommended",
+      "eslint:recommended",
+      "standard"
+    ],
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
+    "rules": {
+      "semi": [
+        "error",
+        "always"
+      ],
+      "padded-blocks": 0,
+      "arrow-parens": [
+        "error",
+        "as-needed"
+      ],
+      "curly": [
+        "error",
+        "multi-line"
+      ],
+      "no-console": [
+        "error",
+        {
+          "allow": [
+            "warn",
+            "error"
+          ]
+        }
+      ],
+      "space-before-function-paren": [
+        "error",
+        {
+          "anonymous": "always",
+          "named": "never",
+          "asyncArrow": "always"
+        }
+      ],
+      "react/prop-types": 0
+    }
+  },
   "dependencies": {
+    "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -18,6 +65,7 @@
     "@babel/plugin-transform-react-jsx": "^7.8.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "cypress": "^4.1.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
